# otterbrix

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  REUSE.toml  build_local_ci.sh  commit-1ec6118-changed-files-tree.md  conanfile.py  get_path.py  state_0ef8b3ff737e0b1ebe74079bf825f828dfc0ec51.md
JSONBench/otterbrix/: CMakeLists.txt  jsonbench.cpp
benchmark/runner/: CMakeLists.txt  benchmark.hpp  benchmark_checkpoint.hpp  benchmark_configuration.hpp  benchmark_runner.cpp  benchmark_runner.hpp  interpreted_benchmark.cpp  interpreted_benchmark.hpp  main.cpp  sql_benchmark.cpp  sql_benchmark.hpp
components/catalog/: CMakeLists.txt  alter_column_validators.cpp  alter_column_validators.hpp  cascade_planner.cpp  cascade_planner.hpp  catalog.cpp  catalog.hpp  catalog_codes.hpp  catalog_error.hpp  catalog_oids.cpp  catalog_oids.hpp  catalog_types.cpp  catalog_types.hpp  catalog_write.hpp  computed_schema.cpp  computed_schema.hpp  ddl_metadata_builder.cpp  ddl_metadata_builder.hpp  dependency_walker.cpp  dependency_walker.hpp  fk_info.hpp  helpers.cpp  helpers.hpp  namespace_storage.cpp  namespace_storage.hpp  oid_batch.hpp  schema.cpp  schema.hpp  session_catalog.hpp  system_table_schemas.cpp  system_table_schemas.hpp  table_id.cpp  table_id.hpp
components/compute/: CMakeLists.txt  compute_kernel.cpp  compute_kernel.hpp  compute_result.cpp  compute_result.hpp  function.cpp  function.hpp  kernel_executor.cpp  kernel_executor.hpp  kernel_signature.cpp  kernel_signature.hpp  kernel_utils.cpp  kernel_utils.hpp
components/expressions/: CMakeLists.txt  aggregate_expression.cpp  aggregate_expression.hpp  compare_expression.cpp  compare_expression.hpp  expression.cpp  expression.hpp  forward.cpp  forward.hpp  function_expression.cpp  function_expression.hpp  key.hpp  scalar_expression.cpp  scalar_expression.hpp  sort_expression.cpp  sort_expression.hpp  update_expression.cpp  update_expression.hpp
components/logical_plan/: CMakeLists.txt  execution_plan.cpp  execution_plan.hpp  forward.cpp  forward.hpp  identifier_types.hpp  node.cpp  node.hpp  node_abort_transaction.cpp  node_abort_transaction.hpp  node_aggregate.cpp  node_aggregate.hpp  node_allocate_oids.cpp  node_allocate_oids.hpp  node_alter_column_add.cpp  node_alter_column_add.hpp  node_alter_column_drop.cpp  node_alter_column_drop.hpp  node_alter_column_rename.cpp  node_alter_column_rename.hpp  node_alter_table.cpp  node_alter_table.hpp  node_begin_transaction.cpp  node_begin_transaction.hpp  node_catalog_resolve_constraint.cpp  node_catalog_resolve_constraint.hpp  node_catalog_resolve_database.cpp  node_catalog_resolve_database.hpp  node_catalog_resolve_function.cpp  node_catalog_resolve_function.hpp  node_catalog_resolve_namespace.cpp  node_catalog_resolve_namespace.hpp  node_catalog_resolve_table.cpp  node_catalog_resolve_table.hpp  node_catalog_resolve_type.cpp  node_catalog_resolve_type.hpp  node_check_constraint.cpp  node_check_constraint.hpp  node_checkpoint.cpp  node_checkpoint.hpp  (+94 more)
components/physical_plan/: CMakeLists.txt
components/physical_plan_generator/: CMakeLists.txt  create_plan.cpp  create_plan.hpp
components/sql/: CMakeLists.txt
components/storage/: CMakeLists.txt  storage.hpp  table_storage_adapter.hpp
core/: CMakeLists.txt  arithmetic_op.hpp  buffer.hpp  config.hpp  executor.hpp  external_dependencies.hpp  operations_helper.hpp  pmr.hpp  popcount.hpp  resource_tracer.hpp  result_wrapper.hpp  scalar.hpp  span.hpp  string_splitter.hpp  strong_typedef.hpp  typedefs.hpp  uvector.hpp
core/assert/: assert.cpp  assert.hpp
core/b_plus_tree/: CMakeLists.txt  b_plus_tree.cpp  b_plus_tree.hpp  block.cpp  block.hpp  segment_tree.cpp  segment_tree.hpp
core/date/: CMakeLists.txt  date_cast.hpp  date_parse.hpp  date_types.hpp  timestamps.hpp  timezones.cpp  timezones.hpp
core/field/: field.hpp
core/file/: file_handle.hpp  local_file_system.cpp  local_file_system.hpp  path_utils.cpp  path_utils.hpp  virtual_file_system.cpp  virtual_file_system.hpp
core/non_thread_scheduler/: clock_test.cpp  clock_test.hpp  scheduler_test.cpp  scheduler_test.hpp
core/numbers/: fixed_point.hpp  temporary.hpp
core/spinlock/: spinlock.hpp
core/string_util/: case_insensitive.hpp  string_util.cpp  string_util.hpp
core/tests/: test_buffer.cpp  test_scalar.cpp  test_uvector.cpp
core/types/: CMakeLists.txt  memory.hpp  optional_ptr.hpp  stack.hpp  string.hpp
integration/python/: .coveragerc  CMakeLists.txt  LICENSE  NOTICE  _probe_ops.py  main.cpp  main2.cpp  main3.cpp  pyutil.hpp  pywrapper.py
pythonpkg/: .gitignore  CMakeLists.txt  MANIFEST.in  conanfile.py  pyproject.toml  setup.py
pythonpkg/core/: typedefs.hpp
pythonpkg/integration/: CMakeLists.txt
services/: CMakeLists.txt
services/collection/: CMakeLists.txt  collection.hpp  context_storage.hpp  create_index.cpp  executor.cpp  executor.hpp
services/disk/: CMakeLists.txt  agent_disk.cpp  agent_disk.hpp  catalog_storage.cpp  catalog_storage.hpp  command.cpp  command.hpp  disk.cpp  disk.hpp  disk_contract.hpp  index_agent_disk.cpp  index_agent_disk.hpp  index_disk.cpp  index_disk.hpp  inline_scan.hpp  manager_disk.cpp  manager_disk.hpp  manager_disk_bootstrap.cpp  manager_disk_ddl.cpp  manager_disk_impl.hpp  manager_disk_io.cpp  manager_disk_resolve.cpp  manager_disk_storage.cpp  metadata.cpp  metadata.hpp  result.cpp  result.hpp
services/dispatcher/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  enrich_logical_plan.cpp  enrich_logical_plan.hpp  plan_resolve_index.hpp  resolve_type.cpp  resolve_type.hpp  txn_messages.hpp  validate_logical_plan.cpp  validate_logical_plan.hpp
services/index/: CMakeLists.txt  bitcask_hash_key_loader.cpp  bitcask_hash_key_loader.hpp  bitcask_index_disk.cpp  bitcask_index_disk.hpp  bitcask_task_executor.cpp  bitcask_task_executor.hpp  btree_index_disk.cpp  btree_index_disk.hpp  disk_hash_table.cpp  disk_hash_table.hpp  index_agent_disk.cpp  index_agent_disk.hpp  index_contract.hpp  index_disk.cpp  index_disk.hpp  manager_index.cpp  manager_index.hpp
services/loader/: CMakeLists.txt  loaded_state.hpp  loader.cpp  (+1 more)
(+1286 files in other folders)
